<resources>
    <string name="app_name">MwdT</string>
    <string name="action_settings">Settings</string>
    <string name="description">This is the android platform solution to group __ . It contains introductory content to fields in Computer Science and Medicine</string>
    <string name="CS_description">There are two fields we would be offering resources for, and they are Cascading Style Sheet (CSS) and HyperText Markup Language (HTML).</string>
    <string name="title_activity_computerscience_menu">computerscience_menu</string>
    <string name="title_activity_css">CSS</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moduleImageViewDescription">Module Image view</string>
    <string name="ModuleTextView">Module Name</string>
    <string name="ModuleText">Module</string>
    <string name="title_activity_css__pdf">CSS_PDF</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">login</string>
    <string name="Username">Username</string>
    <string name="email">E-Mail</string>
    <string name="sign">Sign-In</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_emailaddress">Email Address</string>
    <string name="sign_in_new_account">Register Here</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="contentDescription">Official Logo</string>
    <string name="signin">Sign-In</string>
    <string name="CSS_Overview">Overview</string>
    <string name="CSS_Background">CSS Background</string>
    <string name="CSS_Color">CSS Color</string>
    <string name="CSS_Texts">CSS Text</string>
    <string name="CSS_Fonts">CSS Fonts</string>
    <string name="CSS_Syntax">CSS Syntax</string>
    <string name="CSS_Tutorial">CSS Tutorial</string>
    <string name="CSS_Images">CSS Images</string>
    <string name="CSS_MeasuremenentUnits">CSS Measurement Units</string>
    <string name="CSS_Inclusion">CSS Inclusion</string>
    <string name="title_activity_signin">signin</string>
    <string name="title_activity_activity_css">activity_css</string>
    <string name="title_activity_modules__css">Modules_CSS</string>
    <string name="HTML_Tutorials">HTML Tutorials</string>
    <string name="HTML_Overview">HTML Overview</string>
    <string name="HTML_BasicTags">HTML BasicTags</string>
    <string name="HTML_Elements">HTML Elements</string>
    <string name="HTML_Attributes">HTML Attributes</string>
    <string name="HTML_Formatting">HTML Formatting</string>
    <string name="HTML_PhraseTags">HTML PhraseTags</string>
    <string name="HTML_MetaTags">HTML MetaTags</string>
    <string name="HTML_Comments">HTML Comments</string>
    <string name="HTML_Images">HTML Images</string>
    <string name="HTML_Tables">HTML Tables</string>
    <string name="HTML_Lists">HTML Lists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_module_html">module_html</string>
    <string name="title_activity_module_javascript">module_javascript</string>
    <string name="Javascript_Tutorials">Javascript Tutorials</string>
    <string name="Javascript_Enabling">Javascript Enabling</string>
    <string name="Javascript_ForLoop">Javascript For-Loop</string>
    <string name="Javascript_IfElse">Javascript If-Else</string>
    <string name="Javascript_Operators">Javascript Operators</string>
    <string name="Javascript_Overview">Javascript Overview</string>
    <string name="Javascript_Placement">Javascript Placement</string>
    <string name="Javascript_SwitchCase">Javascript Switch Case</string>
    <string name="Javascript_Syntax">Javascript Syntax</string>
    <string name="Javascript_Variables">Javascript Variables</string>
    <string name="Javascript_WhileLoop">Javascript While Loop</string>
    <string name="title_activity_module_php">module_php</string>
    <string name="PHP_Tutorials">PHP Tutorials</string>
    <string name="PHP_Arrays">PHP Arrays</string>
    <string name="PHP_Constants">PHP Constants</string>
    <string name="PHP_DecisionMaking">PHP Decision Making</string>
    <string name="PHP_EnvironmentalSetup">PHP Environmental Setup</string>
    <string name="PHP_Introduction">PHP Introduction</string>
    <string name="PHP_LoopTypes">PHP Loop Types</string>
    <string name="PHP_OperatorTypes">PHP Operator Types</string>
    <string name="PHP_Strings">PHP Strings</string>
    <string name="PHP_SyntaxOverview">PHP Syntax Overview</string>
    <string name="PHP_VariableTypes">PHP Variable Types</string>
</resources>
