<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.mysampleapp.SignInActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:id="@+id/linearLayout">
        <EditText
            android:id="@+id/signIn_editText_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:hint="@string/Username"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/signIn_editText_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:inputType="textPassword"
            android:hint="@string/sign_in_password"
            android:textColor="#000000" />
        <Button
            android:text="@string/signin"
            android:id="@+id/signIn_button_login"
            android:textColor="#000000"
            android:background="#e88455"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/sign_in_button_height"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/signIn_textView_CreateNewAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_new_account"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="left"
                android:layout_marginLeft="@dimen/sign_in_text_margin"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/signIn_textView_ForgotPassword"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_forgot_password"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="right"
                android:layout_marginRight="@dimen/sign_in_text_margin"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Mobile Web Design Tutor"
        android:id="@+id/signin_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />

</RelativeLayout>
