<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mysampleapp.SignInActivity"
    android:background="#f3eeee">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:background="#ffffff">

        <EditText
            android:id="@+id/register_editText_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/register_editText_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:hint="@string/Username"
            />



        <EditText
            android:id="@+id/register_editText_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:inputType="textPassword"
            android:hint="@string/sign_in_password"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout1"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/signup"
            android:id="@+id/textView_signup"
            android:background="#FFFFFFFF" />
    </LinearLayout>


    <Button
        android:text="@string/signup"
        android:id="@+id/signIn_imageButton_login"
        android:textColor="#FFFFFFFF"
        android:background="#e88455"
        android:layout_width="@dimen/sign_in_button_width"
        android:layout_height="@dimen/sign_in_button_height"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
